trunk/Archive/b6f6a922c2/output
main.cpp:13:5: error: too few template arguments for template 'A'
    A<int> a;    // doesn't compile
    ^
main.cpp:5:32: note: template is declared here
template<class U, class V>     using A = S<U,V>;
~~~~~~~~~~~~~~~~~~~~~~~~~~     ^
1 error generated.
